# cot_legibility

./: .gitignore  CLAUDE.md  any_chinese_correct_results.json  chinese_correct_results.json  chinese_rollout_results_counterfactual_graded.json  chinese_rollout_results_old.jsonl  compare_generations.py  compare_regrade.py  explore_qwq.ipynb  filter_chinese_correct.py  generate_rollouts.py  gpqa_49.json  gpqa_49_forced_answer_graded.json  grade_counterfactual.py  prefill_experiment.py  pyproject.toml  regrade_legibility.py  requirements.txt  research_report.md  run_chinese_rollouts.py  streamlit_app.py
gpqa_49/: counterfactual_graded.json  forced_answer_graded.json  gpqa_49_graded.json
legibility_analysis/: README.md  analyze_backtracking_mentions.py  analyze_language_switching.py  analyze_language_switching_mentions.py  analyze_punctuation_mentions.py  analyze_repetition_mentions.py  categorize_legibility.py  compare_generations.py  compare_graders.py  compare_regrade.py  plot_language_switching.py  plot_legibility_categories.py  regrade_legibility.py
legibility_analysis/qwq_gpqa_combined/: language_switching_analysis.json  legibility_categories.json  legibility_category_counts.json  legibility_per_item.json
prefill_investigation/: check_chat_template.py  prefill_investigation.md  qwen-results-no-template.md  qwen-results-no-template2.md  qwq_chat_template.md  r1-results-no-template.md  r1-results-no-template2.md  r1_chat_template.md  test_prefill.py
scripts/: test_prefill.py
src/: main.py
src/analysis/: plots.py
src/inference/: providers.py  (+1 more)
(+20 files in other folders)
